still learning email dev

--- a/Code Examples/Starter.html
+++ b/Code Examples/Starter.html
@@ -12,6 +12,13 @@
 		</style>
 	</head>
 	<body id="body" style="margin: 0 !important; padding: 0 !important;">
+		<div class="header">
+			<img src="C:\Users\TARI\OneDrive\Pictures\279180156_462785348955631_2173202091418213659_n.jpg" class="header__img">
+			<h2 class="header-primary">Tari Yekorogha</h2>
+			<p class="header__text">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit libero accusamus est ipsum nisi assumenda cum debitis maxime a nihil, culpa cupiditate optio hic rerum corrupti ipsam sunt illo.
+			</p>
+		</div>
 
 		
 
