--- a/Code Examples/Starter.html
+++ b/Code Examples/Starter.html
@@ -6,21 +6,106 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<style type="text/css">
+
+			/* CLIENT-SPECIFIC STYLES */
+			body, table, td, a { -webkit-text-size-adjust: 100%; -ms-text-side-adjust: 
+			100%; }
+			table, td { mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
+			img { -ms-interpolation-mode: bicubic; }
+
+			/* RESET STYLES */
+			img { border: 0; height: auto; line-height: 100%; outline: none;
+			text-decoration: none; }
+			table { border-collapse: collaspe !important; }
+			body { height: 100% !important; margin: 0 !important; padding: 0 !important;
+			width: 100% !important; }
+
+			/* iOS BLUE LINKS */
+			a[x-apple-data-detectors] {
+				color: inherit !important;
+				text-decoration: none !important;
+				font-size: inherit !important;
+				font-family: inherit !important;
+				font-weight: inherit !important;
+				line-height: inherit !important;
+			}
 			
-			
+			/* GMAIL BLUE LINKS */
+			u + #body a {
+				color: inherit;
+				text-decoration: none;
+				font-size: inherit;
+				font-family: inherit;
+				font-weight: inherit;
+				line-height: inherit;
+			}
+
+			/* SAMSUNG MAIL BLUE LINKS */
+			#MessageViewBody a {
+				color: inherit;
+				text-decoration: none;
+				font-size: inherit;
+				font-family: inherit;
+				font-weight: inherit;
+				line-height: inherit;
+			}
+
+			/*  Universal styles for links and stuff */
+
+
+			/* Responsive styles */
 
 		</style>
 	</head>
 	<body id="body" style="margin: 0 !important; padding: 0 !important;">
-		<div class="header">
-			<img src="C:\Users\TARI\OneDrive\Pictures\279180156_462785348955631_2173202091418213659_n.jpg" class="header__img">
-			<h2 class="header-primary">Tari Yekorogha</h2>
-			<p class="header__text">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit libero accusamus est ipsum nisi assumenda cum debitis maxime a nihil, culpa cupiditate optio hic rerum corrupti ipsam sunt illo.
-			</p>
+		<div style="color: black; font-family: sans-serif; font-size: 18px; line-height: 20px; margin: 0 auto; max-width: 600px;">
+			<!-- Logo image  -->
+			<center>
+				<img src="C:\Users\TARI\OneDrive\Pictures\279180156_462785348955631_2173202091418213659_n.jpg" class="header__img"  width="60" style="border-radius:60px; display:block; margin: 0 auto;">
+			</center>
+			
+	
+	
+			<!-- Headline -->
+			<h1 style="margin: 40px 0; text-align: center;">This is a heading!</h1>
+	
+	
+	
+	
+			<!-- Hero image -->
+			<img alt="Bara yekorogha looking serious"  width="600" border="0" style="display: block; max-width: 100%; min-width: 100px; width: 100%;" src="C:\Users\TARI\OneDrive\Pictures\279180156_462785348955631_2173202091418213659_n.jpg" class="header__img">
+	
+	
+	
+	
+			<!-- Body copy -->
+			<p style="margin: 40px 0 20px 0;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A totam laborum corrupti rem fugiat, sint itaque, officia perferendis soluta, sed autem hic porro illo sunt laboriosam maiores nam fugit in!</p>
+			
+			<p style="margin: 0 0 20px 0;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A totam laborum corrupti rem fugiat, sint itaque, officia perferendis soluta, sed autem hic porro illo sunt laboriosam maiores nam fugit in!</p>
+	
+	
+	
+			<!-- Button  -->
+			<div>
+			<!--[if mso]>
+			<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://frontendmasters.com" style="height:60px;v-text-anchor:middle;width:200px;" arcsize="7%" strokecolor="#1e3650" fillcolor="#0b33ef">
+			<w:anchorlock/>
+			<center style="color:#ffffff;font-family:sans-serif;font-size:13px;font-weight:bold;">This is a link</center>
+			</v:roundrect>
+			<![endif]-->
+			<a href="http://frontendmasters.com"
+			style="background-color:#0b33ef;border:1px solid #1e3650;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:13px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;mso-hide:all;">This is a link
+		    </a>
+		    </div>
+	
+	
+	
+			<!-- Footer -->
+			<div style="color: grey; font-family: sans-serif; font-size: 18px; line-height: 24px; margin: 0 auto; max-width: 600px;">
+				<p style="margin: 60px 0 20px 0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae soluta mollitia consequatur quas, tempora sit earum illum, dolor minima magnam ea animi exercitationem repellat repellendus praesentium provident aperiam similique explicabo.<a href="#" style="color: rebeccapurple; font-weight:bold;"> Feel free to unsubscribe</a></p>
+				<p style="margin: 0 0 60px 0;">12345 Place City Contry, Blah Blah</p>
+			</div>
+			
 		</div>
-
-		
-
 	</body>
 </html>
